style.css
/* FONTS */
@font-face {
    font-family: "Pixel";
    src: url('fonts/04B_30__.TTF');
    src: url('fonts/04B_30__.TTF') format('truetype');
}

@font-face {
    font-family: "Alagard";
    src: url('fonts/alagard.ttf');
    src: url('fonts/alagard.ttf') format('truetype');
}

@font-face {
    font-family: "Start";
    src: url('fonts/prstartk.ttf');
    src: url('fonts/prstartk.ttf') format('truetype');
}

/* GENERAL SETTINGS */
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html, body {
    height: 100%;
    width: 100%;
}

body {
  margin: 0;
  color: #fac650;
  background-color: #555956;
  line-height: 1.5;
  font-family: Start, "PT Sans", Calibri, Tahoma, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

h1, h2, div, p {
    margin: 0;
}

a {
    text-decoration: none;
    color: #fac650;
}

button {
    margin: 0;
    padding: 0;
    border-radius: 16px;
    border: none;
    background-color: #555956;
}

/* MAIN CONTENT */
#header {
    font-family: Pixel, "PT Sans", Calibri, Tahoma, sans-serif;
    margin: 0;
    text-align: center;
    background-color: #1f2937;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#content {
    height: 100%;
    margin: 0;
    text-align: center;
    background-color: #555956;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

#score-message {
    margin: 0;
    text-align: center;
}

.choices-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 100px;
    margin-top: 100px;
}

.choices {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-bottom: 50px;
    width: 240px;
}

#player-score, #computer-score {
    margin-top: 50px;
}

/* BUTTONS */
#buttons-container {
    margin: 0;
    padding: 0;
    text-align: center;
    background-color: #555956;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.button {
    margin: 0;
    padding: 0;
    max-width: 110px;
    max-height: 110px;
    background-color: #1f2937;
    border-radius: 16px;
    cursor: pointer;
    transition: all 0.2s ease;
    box-shadow: 0px 5px 10px 0px #fac650;  
}

.button:hover {
    transform: translateY(-30px) scale(1.2);
    box-shadow: 0px 1px 2px 0px #fac650,
                1px 2px 4px 2px #fac650,
                2px 4px 8px 4px #fac650,
                2px 4px 16px 8px #fac650;
}

.show-choice {
    margin: 0;
    padding: 0;
    max-width: 110px;
    max-height: 110px;
    background-color: #555956;
    border-radius: 16px;
}


/* FOOTER */
#footer {
    margin: 0;
    padding: 20px 0px;
    text-align: center;
    background-color: #1f2937;
}

.mcierny {
    display: flex;
    justify-content: center;
    gap: 50px;
    margin-bottom: 25px;
}

.github {
    width: 25px;
    transition: transform 0.3s ease-in-out;
    border-radius: 50%;
}

.github:hover {
    transform: rotate(360deg) scale(1.3);
    box-shadow: 0px 0px 10px 5px #fac650;
                /* 1px 2px 4px 0px #fac650,
                2px 4px 8px 0px #fac650,
                2px 4px 16px 0px #fac650; */
}

/* MEDIA QUERIES */
@media only screen and (max-width: 620px) {
* {
    width: 100%;
    font-size: small;
    margin: 0;
}

img {
    width: 50%;
}

#footer > p, a {
    font-size: 10px;
}
}

